--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,17 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>g1_ros2_dds_bridge</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="vitormendesrb@gmail.com">dev</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>DDS to ROS 2 bridge for Unitree G1 (LowState odom + Livox PointCloud2)</description>
+  <maintainer email="vitormendesrb@gmail.com">Vitor Mendes</maintainer>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
